src/main/k8s/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: workshop-sensor-data-collector
  labels:
    app: workshop-sensor-data-collector
spec:
  type: LoadBalancer
  exernalIPs: 116.203.6.48
  selector:
    app: workshop-sensor-data-collector
  ports:
    - protocol: TCP
      port: 8080
      name: http

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: workshop-sensor-data-collector
  labels:
    app: workshop-sensor-data-collector
spec:
  replicas: 4
  selector:
    matchLabels:
      app: workshop-sensor-data-collector
  strategy:
    type: "RollingUpdate"
    rollingUpdate:
      maxSurge: "50%"
  template:
    metadata:
      labels:
        app: workshop-sensor-data-collector
    spec:
      containers:
        - name: workshop-sensor-data-collector
          image: jomaseller/workshop-sensor-data-collector:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http-port
          resources:
            requests:
              cpu: 0.05
              memory: "512Mi"
            limits:
              memory: "512Mi"
          readinessProbe:
            httpGet:
              path: "/actuator/health"
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 20
          livenessProbe:
            httpGet:
              path: "/actuator/health"
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 50
            periodSeconds: 10
            successThreshold: 1
      securityContext:
        runAsUser: 1001

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: workshop-sensor-data-collector
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: workshop-sensor-data-collector
              servicePort: 8080
